[package]
name = "tuiermo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
crossterm = "0.22.1"
tui-input = "0.1.2"
unidecode = "0.3.0"

[dependencies.tui]
version = "0.16.0"
default-features = false
features = ["crossterm"]
